[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmeter"
version = "0.1.0"
description = "One line to track every AI API cost. Sentry for AI costs."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Deependra Vishwakarma", email = "dvip34456@gmail.com" },
]
requires-python = ">=3.10"
keywords = ["llm", "openai", "anthropic", "gemini", "cost", "tokens", "tracking", "observability", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/deependra04/llmeter"
Repository = "https://github.com/deependra04/llmeter"
Issues = "https://github.com/deependra04/llmeter/issues"

[project.scripts]
llmeter = "llmeter.cli:main"

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.25.0"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["src/llmeter"]

[tool.hatch.build.targets.wheel.force-include]
"src/llmeter/pricing.json" = "llmeter/pricing.json"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
